fix: rename jest to test

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,5 +9,5 @@ jobs:
       with:
         node-version: '20'
     - run: npm install
-    - run: npm jest
+    - run: npm test
     - run: node src/index.js
