add docker as ci feature

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,3 +18,16 @@ jobs:
     - run: npm install
     - run: npm test
     - run: node src/index.js
+    -
+      name: Set up QEMU
+      uses: docker/setup-qemu-action@v3
+    -
+      name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+    -
+      name: Build and push
+      id: docker_build
+      uses: docker/build-push-action@v6
+      with:
+        push: false
+        tags: aldcejam/ci-cd:latest
